data/all_generated_tests/raw_wast_tests/if_UnreachableCodeExecution_1458.wast
;; 9. **Incorrect `else` Branch ending in Unreachable**:    - Incorrectly formed `else` block that does not properly match `blocktype`, ending in an `unreachable` instruction.    - **Constraint**: Checks if improper blocktype handling within `else` context traps correctly.

(assert_invalid
  (module
    (func (result i32)
      (i32.const 0)
      (if (result i32) (then (i32.const 1)) (else (unreachable)))
    )
  )
  "type mismatch"
)